// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrModal.vue leaves optional slots empty, handleOpened 1`] = `
<div
  class="cdr-modal"
  role="presentation"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cdr-modal__innerWrap"
        style=""
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >
                <cdr-text-stub
                  modifier="heading-serif-600"
                  space=""
                  tag="h1"
                >
                  Label is the modal title
                </cdr-text-stub>
              </div>
              <cdr-button-stub
                aria-label="close"
                class="cdr-modal__close-button"
                icononly="true"
                id="close-modal-button"
                size="medium"
                space=""
                tag="button"
                type="button"
              >
                <iconxlg-stub
                  inheritcolor="true"
                  size="medium"
                  space=""
                />
              </cdr-button-stub>
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: 688px;"
                tabindex="0"
              >
                Main content
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrModal.vue renders all slots, handleClosed 1`] = `
<div
  class="cdr-modal"
  role="presentation"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cdr-modal__innerWrap"
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >
                Terms and Conditions
              </div>
              <cdr-button-stub
                aria-label="close"
                class="cdr-modal__close-button"
                icononly="true"
                id="close-modal-button"
                size="medium"
                space=""
                tag="button"
                type="button"
              >
                <iconxlg-stub
                  inheritcolor="true"
                  size="medium"
                  space=""
                />
              </cdr-button-stub>
            </div>
            <div
              class="cdr-modal__sticky-content"
              tabindex="0"
            >
              Sticky content
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: -80px;"
                tabindex="0"
              >
                Main content
              </div>
              <div
                class="cdr-modal__footer"
              >
                Footer content
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrModal.vue scrolling and fullscreen snapshot 1`] = `
<div
  class="cdr-modal"
  role="presentation"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cdr-modal__innerWrap"
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >
                <cdr-text-stub
                  modifier="heading-serif-600"
                  space=""
                  tag="h1"
                >
                  Label is the modal title
                </cdr-text-stub>
              </div>
              <cdr-button-stub
                aria-label="close"
                class="cdr-modal__close-button"
                icononly="true"
                id="close-modal-button"
                size="medium"
                space=""
                tag="button"
                type="button"
              >
                <iconxlg-stub
                  inheritcolor="true"
                  size="medium"
                  space=""
                />
              </cdr-button-stub>
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: 688px;"
                tabindex="0"
              >
                Main content
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;
